--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,19 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="DefaultNumberPickerTheme" parent="Theme.MyApplication">
+        <item name="colorControlNormal">@color/transparent</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textSize">15dp</item>
+
+    </style>
+
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
+
+    <color name="transparent">#00FFFFFF</color>
 </resources>
