--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/grey</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -13,10 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="DefaultNumberPickerTheme" parent="Theme.MyApplication">
+    <style name="DefaultNumberPickerTheme">
         <item name="colorControlNormal">@color/transparent</item>
         <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:fontFamily">@font/pixeboy</item>
+        <item name="android:textSize">20dp</item>
 
     </style>
 
