added vertical layout + fixed bug: where user first pressed pause then reset

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -16,10 +16,11 @@
         android:gravity="center"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.902" />
+        app:layout_constraintVertical_bias="0.774" />
 
     <TextView
         android:id="@+id/counttime_player2"
@@ -28,14 +29,13 @@
         android:elevation="10dp"
         android:fontFamily="@font/pixeboy"
         android:gravity="center"
-        android:rotation="180"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.104"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintVertical_bias="0.774" />
 
     <ImageButton
         android:id="@+id/reset"
@@ -43,37 +43,37 @@
         android:layout_height="70dp"
         android:background="@null"
         android:scaleType="centerCrop"
-        android:src="@drawable/reset_button"
+        android:elevation="1dp"
         android:scaleX="0.9"
         android:scaleY="0.9"
+        android:src="@drawable/reset_button"
         app:layout_constraintBottom_toBottomOf="@+id/startstop_player1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
 
     <pl.droidsonroids.gif.GifImageButton
         android:id="@+id/startstop_player1"
-        android:layout_width="wrap_content"
-        android:layout_height="242dp"
+        android:layout_width="275dp"
+        android:layout_height="412dp"
         android:background="#fff"
         android:scaleType="centerCrop"
         android:src="@drawable/player1_loading_screen"
         android:text="countdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <pl.droidsonroids.gif.GifImageButton
         android:id="@+id/startstop_player2"
-        android:layout_width="wrap_content"
-        android:layout_height="242dp"
+        android:layout_width="275dp"
+        android:layout_height="414dp"
         android:background="#fff"
-        android:rotation="180"
         android:scaleType="centerCrop"
         android:src="@drawable/player2_loading_screen"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,10 +94,10 @@
         android:src="@drawable/pause_button"
         app:layout_constraintBottom_toBottomOf="@+id/startstop_player1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/startstop_player2" />
+        app:layout_constraintTop_toTopOf="@+id/startstop_player2"
+        app:layout_constraintVertical_bias="0.5" />
 
     <NumberPicker
         android:id="@+id/picker"
@@ -110,7 +110,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/startstop_player2" />
+        app:layout_constraintTop_toTopOf="@+id/startstop_player2"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/turnCounter"
@@ -130,7 +131,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/pixeboy"
-        android:rotation="180"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
