--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -104,8 +105,8 @@
         android:layout_width="0dp"
         android:layout_height="98dp"
         android:descendantFocusability="blocksDescendants"
-        android:scaleX="1"
-        android:scaleY="1"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
         android:theme="@style/DefaultNumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
