--- a/app/src/main/res/layout/layout_picktime_dialog.xml
+++ b/app/src/main/res/layout/layout_picktime_dialog.xml
@@ -9,6 +9,7 @@
         android:id="@+id/bonusMinutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -20,6 +21,7 @@
         android:id="@+id/bonusSeconds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.855"
@@ -31,6 +33,7 @@
         android:id="@+id/bonusHours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.149"
@@ -42,6 +45,7 @@
         android:id="@+id/baseMinutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -53,6 +57,7 @@
         android:id="@+id/baseSeconds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.855"
@@ -64,6 +69,7 @@
         android:id="@+id/baseHours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.149"
