--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,4 +20,12 @@
         <item name="android:textSize">20dp</item>
 
     </style>
+
+    <style name="DefaultDialogNumberPickerTheme">
+        <!-- <item name="colorControlNormal">@color/transparent</item> -->
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:fontFamily">@font/pixeboy</item>
+        <item name="android:textSize">20dp</item>
+
+    </style>
 </resources>
