reworked the ui for the pick time dialog

--- a/app/src/main/res/layout/layout_picktime_dialog.xml
+++ b/app/src/main/res/layout/layout_picktime_dialog.xml
@@ -1,176 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <NumberPicker
-        android:id="@+id/bonusMinutes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/DefaultDialogNumberPickerTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baseMinutes"
-        app:layout_constraintVertical_bias="0.913" />
-
-    <NumberPicker
-        android:id="@+id/bonusSeconds"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/DefaultDialogNumberPickerTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baseSeconds"
-        app:layout_constraintVertical_bias="0.913" />
-
-    <NumberPicker
-        android:id="@+id/bonusHours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/DefaultDialogNumberPickerTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.149"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baseHours"
-        app:layout_constraintVertical_bias="0.913" />
-
-    <NumberPicker
-        android:id="@+id/baseMinutes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/DefaultDialogNumberPickerTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339" />
-
-    <NumberPicker
-        android:id="@+id/baseSeconds"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/DefaultDialogNumberPickerTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339" />
-
-    <NumberPicker
-        android:id="@+id/baseHours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/DefaultDialogNumberPickerTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.149"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339" />
-
-    <TextView
-        android:id="@+id/baseTextHours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hours"
-        app:layout_constraintBottom_toTopOf="@+id/baseHours"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.797" />
-
-    <TextView
-        android:id="@+id/baseText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Starting Time:"
-        app:layout_constraintBottom_toTopOf="@+id/baseTextHours"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.521" />
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/bonusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/pixeboy"
         android:text="Increment Time:"
-        app:layout_constraintBottom_toTopOf="@+id/BonusTextViewHours"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.168"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baseHours"
-        app:layout_constraintVertical_bias="0.479" />
-
-    <TextView
-        android:id="@+id/baseTextViewMinutes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Minutes"
-        app:layout_constraintBottom_toTopOf="@+id/baseMinutes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.865"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.797" />
+        app:layout_constraintVertical_bias="0.104" />
 
-    <TextView
-        android:id="@+id/baseTextViewSeconds"
+    <NumberPicker
+        android:id="@+id/baseMinutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seconds"
-        app:layout_constraintBottom_toTopOf="@+id/baseSeconds"
+        android:layout_marginStart="24dp"
+        android:background="@drawable/drawablenp_small"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/baseText"
+        app:layout_constraintVertical_bias="0.303" />
+
+    <NumberPicker
+        android:id="@+id/baseSeconds"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/drawablenp_small"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.831"
+        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintStart_toEndOf="@+id/baseMinutes"
+        app:layout_constraintTop_toBottomOf="@+id/baseText"
+        app:layout_constraintVertical_bias="0.303" />
+
+    <NumberPicker
+        android:id="@+id/bonusSeconds"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/drawablenp_small"
+        android:theme="@style/DefaultDialogNumberPickerTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bonusText"
+        app:layout_constraintVertical_bias="0.303" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="1dp"
+        android:layout_height="150dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/bonusSeconds"
+        app:layout_constraintHorizontal_bias="0.405"
+        app:layout_constraintStart_toEndOf="@+id/sBaseText"
+        app:layout_constraintTop_toBottomOf="@+id/bonusText"
+        app:layout_constraintVertical_bias="0.312" />
+
+    <TextView
+        android:id="@+id/baseText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/pixeboy"
+        android:text="Starting Time:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.797" />
+        app:layout_constraintVertical_bias="0.104" />
 
     <TextView
-        android:id="@+id/BonusTextViewHours"
+        android:id="@+id/sBaseText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hours"
-        app:layout_constraintBottom_toTopOf="@+id/bonusHours"
+        android:text="sec"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baseHours"
-        app:layout_constraintVertical_bias="0.711" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/baseSeconds"
+        app:layout_constraintTop_toBottomOf="@+id/baseText" />
 
     <TextView
-        android:id="@+id/bonusTextViewSeconds"
+        android:id="@+id/mBaseText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seconds"
-        app:layout_constraintBottom_toTopOf="@+id/bonusSeconds"
+        android:text="min"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.831"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baseSeconds"
-        app:layout_constraintVertical_bias="0.709" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/baseMinutes"
+        app:layout_constraintTop_toBottomOf="@+id/baseText" />
 
     <TextView
-        android:id="@+id/bonusTextViewMinutes"
+        android:id="@+id/sBonusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Minutes"
-        app:layout_constraintBottom_toTopOf="@+id/bonusMinutes"
+        android:text="sec"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baseMinutes"
-        app:layout_constraintVertical_bias="0.709" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/bonusSeconds"
+        app:layout_constraintTop_toBottomOf="@+id/bonusText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
