--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#EBEBEB</color>
+    <color name="notMuchTimeOrange">#E42F03</color>
+    <color name="pickerBackgroundOrange">#F9E9D5</color>
 </resources>
