--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,10 +23,11 @@
     </style>
 
     <style name="DefaultDialogNumberPickerTheme">
-        <!-- <item name="colorControlNormal">@color/transparent</item> -->
+        <item name="colorControlNormal">@color/transparent</item>
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:fontFamily">@font/pixeboy</item>
         <item name="android:textSize">20dp</item>
+        <item name="background">@drawable/drawablenp_small</item>
 
     </style>
 
