added landscape layout for dialogwindow. background for dialogwindow_numberpicker is now transparent

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -22,10 +22,11 @@
     </style>
 
     <style name="DefaultDialogNumberPickerTheme">
-        <!-- <item name="colorControlNormal">@color/transparent</item> -->
+        <item name="colorControlNormal">@color/transparent</item>
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:fontFamily">@font/pixeboy</item>
         <item name="android:textSize">20dp</item>
+
 
     </style>
 </resources>
