--- a/app/src/main/res/drawable/drawablenp_small.xml
+++ b/app/src/main/res/drawable/drawablenp_small.xml
@@ -3,7 +3,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="#ffffff" />
+        <solid android:color="#00000000" />
     </shape>
 </item>
 <item android:top="80dp" android:right="5dp" android:bottom="80dp"
